assets/css/custom.css
#temp-save,
#perm-save,
#statistics,
#options,
#calendar,
.hidden-tr {
  display: none;
}

#arbeitszeit,
#tagessumme-helper {
  border: none;
}

#tr-890 {
  transition: 500ms ease-in-out;
}

[id*="-btn-delete"].is-success,
[id*="-btn-add"].is-danger,
button.is-loading {
  pointer-events: none;
}

.calendar-container {
  border-left: 0.5px solid #00d1b2;
  border-bottom: 0.5px solid #00d1b2;
  border-right: 0.5px solid #00d1b2;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.navbar-item .button {
  border: none;
}

.calendar.is-large [class*="calendar-range-"]::before {
  top: 1.9rem;
}

.calendar.is-large [class*="calendar-range-"][class*="calendar-range-start-"]::before {
  left: auto;
  width: 1.9rem;
}

.calendar [class*="calendar-range-"] {
  position: relative;
}

.calendar [class*="calendar-range-"]::before {
  content: "";
  height: 2.2rem;
  left: 0;
  position: absolute;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
}

.calendar [class*="calendar-range-"][class*="calendar-range-start-"]::before {
  left: 50%;
}

.calendar.is-large [class*="calendar-range-"][class*="calendar-range-end-"]::before {
  right: 1.9rem;
}

.calendar-events button.button.calendar-event {
  border-radius: 0;
  width: 100%;
  pointer-events: none;
}

.calendar.is-large .calendar-events {
  padding: 0;
}

.calendar.is-large .button .icon:first-child:not(:last-child) {
  margin-left: 0;
}

.fas.fa-plane {
  transform: rotate(-45deg);
}

/* https://codepen.io/AllThingsSmitty/pen/MyqmdM */

@media screen and (max-width: 1088px) {
  table {
    border: 0;
  }

  table caption {
    font-size: 1.3em;
  }

  table thead {
    border: none;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
  }

  table tr {
    border-bottom: 3px solid #ddd;
    display: block;
    margin-bottom: 0.625em;
  }

  table td {
    border-bottom: 1px solid #ddd;
    display: block;
    font-size: 0.8em;
    text-align: right;
  }

  table td::before {
    content: attr(data-label);
    float: left;
    font-weight: bold;
    text-transform: uppercase;
  }

  table td:last-child {
    border-bottom: 0;
  }
}

